--- a/style/main.css
+++ b/style/main.css
@@ -2,6 +2,7 @@
     background-color: #36393e;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: white;
+    margin: 0px;
 }
 
 p{
@@ -14,7 +15,7 @@ b{
 }
 
 img{
-    background: none;   
+    background-color: transparent;
 }
 
 span{
@@ -23,7 +24,7 @@ span{
 
 /*start view*/
 .image{
-    width: 1920px;
+    width: 100%;
     filter: blur(4px);
     -webkit-filter: blur(5px);
 }
@@ -40,6 +41,7 @@ span{
 
 #tiitle{
     font-size: 33px;
+    margin-bottom: 30px;
 }
 
 .name{
@@ -47,6 +49,7 @@ span{
     font-size: 37px;
     font-weight: 600;
     color: coral;
+    margin-bottom: 20px;
 }
 
 #text{
@@ -55,10 +58,19 @@ span{
 }
 
 .back2{
-    position: absolute;
-    height: 100%;
+    position: relative;
     width: 100%;
     background-color: #36393e;
-    top: 600px;
 }
 
+.footer{
+    margin-left: 0px;
+    margin-top: 30px;
+    text-align: center;
+    position: relative;
+    bottom: 0px;
+    background-color: rgb(34, 36, 36);
+    color: gray;
+    width: 100%;
+    height: 20px;
+}
