--- a/style/aboutme.css
+++ b/style/aboutme.css
@@ -4,7 +4,7 @@
     width: 40%;
     margin-left: 30%;
     margin-top: 50px;
-    height: 300px;
+    height: 320px;
     background-color:#3b3e41;
     border-radius: 20px;
 }
@@ -29,4 +29,21 @@
 
 .aboutme-text{
     background: none;   
+}
+.skills-tittle{
+    color: antiquewhite;
+    font-size: 13px;
+}
+
+.skills{
+    display: flex;
+    justify-content: center;
+    background-color: transparent;
+}
+
+.skill-img{
+    background-color: transparent;
+    margin-top: 10px;
+    margin-left: 8px;
+    margin-right: 8px;
 }
