--- a/style/projects.css
+++ b/style/projects.css
@@ -1,16 +1,72 @@
 .myprojects{
     padding-top: 30px;
     text-align: center;
-    width: 40%;
-    margin-left: 30%;
+    width: 50%;
+    margin-left: 25%;
     margin-top: 50px;
-    height: 300px;
+    padding-bottom: 40px;
     background-color:#3b3e41;
     border-radius: 20px;
 }
 
 .myprojects-tittle{
-    font-size: 25px;
+    font-size: 28px;
     color: coral;
-    
+    margin-bottom: 30px;   
 }
+
+.projects-logo{
+    background: none;   
+    width: 120px;
+    margin: auto;
+    display: block;
+    margin-bottom: 20px;
+}
+
+.projects{
+    background: transparent;
+    margin-bottom: 25px;
+}
+
+.project-tittle{
+    color: beige;
+    font-size: 26px;
+    margin: 0 0 15px 0;
+}
+.project-desc{
+    font-size: 16.4px;
+}
+
+.project-image-tittle{
+    color: beige;
+    font-size: 15px;
+}
+
+.project-images{
+    display: block;
+    justify-content: center;
+    background-color: transparent;
+}
+
+.project-img{
+    background-color: transparent;
+    margin-top: 25px;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.button-more{
+    background-color: transparent;
+}
+
+.more{
+    font-size: 20px;
+    text-decoration: none;
+    color: coral;
+    background-color: transparent;
+  }
+
+  .more:hover{
+    font-weight: 600;
+    color: rgb(221, 158, 22);
+  }
