--- a/style/aboutme.css
+++ b/style/aboutme.css
@@ -1,23 +1,23 @@
 .aboutme{
     padding-top: 30px;
     text-align: center;
-    width: 40%;
-    margin-left: 30%;
+    width: 50%;
+    margin-left: 25%;
     margin-top: 50px;
-    height: 320px;
+    padding-bottom: 30px;
     background-color:#3b3e41;
     border-radius: 20px;
 }
 
 .aboutme-tittle{
-    font-size: 25px;
+    font-size: 28px;
     color: coral;
     margin-bottom: 20px;
 }
 
 .aboutme-logo{
     background: none;   
-    width: 100px;
+    width: 120px;
     margin: auto;
     display: block;
     margin-bottom: 20px;
@@ -28,11 +28,12 @@
 }
 
 .aboutme-text{
+    font-size: 16.5;
     background: none;   
 }
 .skills-tittle{
     color: antiquewhite;
-    font-size: 13px;
+    font-size: 15px;
 }
 
 .skills{
