--- a/style/contact.css
+++ b/style/contact.css
@@ -1,16 +1,16 @@
 .contact{
     padding-top: 30px;
+    padding-bottom: 30px;
     text-align: center;
-    width: 40%;
-    margin-left: 30%;
+    width: 50%;
+    margin-left: 25%;
     margin-top: 50px;
-    height: 200px;
     background-color:#3b3e41;
     border-radius: 20px;
 }
 
 .contact-tittle{
-    font-size: 25px;
+    font-size: 28px;
     color: coral;
     margin-bottom: 35px;
 }
