--- a/style/aboutme.css
+++ b/style/aboutme.css
@@ -1,7 +1,25 @@
+#tiitle{
+    font-size: 3.5vh;
+    margin-bottom: 30px;
+}
+
+.name-aboutme{
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 4vh;
+    font-weight: 600;
+    color: coral;
+    margin-bottom: 20px;
+}
+
+#text{
+    font-size: 1.5vh;
+    color: azure;   
+}
+
 .aboutme{
     padding-top: 30px;
     text-align: center;
-    width: 50%;
+    width: 50vw;
     margin-left: 25%;
     margin-top: 50px;
     padding-bottom: 30px;
@@ -9,8 +27,16 @@
     border-radius: 20px;
 }
 
+@media (max-width:900px){
+    .aboutme{
+        width: 80%;
+        margin-left: 10%;
+        margin-right: 10%;
+    }
+  }
+
 .aboutme-tittle{
-    font-size: 28px;
+    font-size: 2.5vh;
     color: coral;
     margin-bottom: 20px;
 }
@@ -27,12 +53,12 @@
 }
 
 .aboutme-text{
-    font-size: 16.5;
+    font-size: 1.7vh;
     background: none;   
 }
 .skills-tittle{
     color: antiquewhite;
-    font-size: 15px;
+    font-size: 1.5vh;
 }
 
 .skills{
@@ -46,4 +72,6 @@
     margin-top: 10px;
     margin-left: 8px;
     margin-right: 8px;
+    padding: 0.5vh;
+    width: 1.5vh;
 }
