--- a/style/contact.css
+++ b/style/contact.css
@@ -9,12 +9,19 @@
     border-radius: 20px;
 }
 
+@media (max-width:900px){
+    .contact{
+        width: 80%;
+        margin-left: 10%;
+        margin-right: 10%;
+    }
+  }
+
 .contact-tittle{
-    font-size: 28px;
+    font-size: 2.5vh;
     color: coral;
     margin-bottom: 35px;
 }
-
 .contact-text{
     background: none;   
 }
@@ -37,7 +44,7 @@
     background-color: transparent;
     position: relative;
     top: 6px;
-    font-size: 22px;
+    font-size: 2vh;
     text-align: center;  
 }
 
