--- a/style/aboutme.css
+++ b/style/aboutme.css
@@ -9,6 +9,8 @@
     font-weight: 600;
     color: coral;
     margin-bottom: 20px;
+    margin-bottom: 3vh;
+    margin-top: 4vh;
 }
 
 #text{
@@ -17,7 +19,7 @@
 }
 
 .aboutme{
-    padding-top: 30px;
+    padding-top: 3vh;
     text-align: center;
     width: 50vw;
     margin-left: 25%;
@@ -38,7 +40,7 @@
 .aboutme-tittle{
     font-size: 2.5vh;
     color: coral;
-    margin-bottom: 20px;
+    margin-bottom: 3vh;
 }
 
 .aboutme-logo{
