--- a/style/contact.css
+++ b/style/contact.css
@@ -1,5 +1,5 @@
 .contact{
-    padding-top: 35px;
+    padding-top: 3vh;
     padding-bottom: 30px;
     text-align: center;
     width: 50%;
@@ -20,14 +20,14 @@
 .contact-tittle{
     font-size: 2.5vh;
     color: coral;
-    margin-bottom: 35px;
+    margin-bottom: 3vh; 
 }
 .contact-text{
     background: none;   
 }
 
 .media{
-    margin-top: 10px;
+    margin-top: 1vh;
     margin-left: 5%;
     display: flex;
     text-align: center;
