--- a/style/projects.css
+++ b/style/projects.css
@@ -1,8 +1,8 @@
 .myprojects{
-    padding-top: 30px;
+    padding-top: 3vh;
     text-align: center;
-    width: 60%;
-    margin-left: 20%;
+    width: 66%;
+    margin-left: 17%;
     margin-top: 50px;
     padding-bottom: 40px;
     background-color:#3b3e41;
@@ -20,7 +20,7 @@
 .myprojects-tittle{
     font-size: 2.5vh;
     color: coral;
-    margin-bottom: 50px;   
+    margin-bottom: 3vh; 
 }
 
 .projects-logo{
@@ -92,7 +92,9 @@
 .project{
     margin-top: 30px;
     border-bottom: 2px solid;
-    padding: 4vh;
+    padding-left: 5vh;
+    padding-right: 5vh;
+    padding-top: 4vh;
     border-color: gray;
     margin-left: 7px;
     margin-right: 7px;
