--- a/style/main.css
+++ b/style/main.css
@@ -61,7 +61,14 @@ span{
   }
 
 /*start view*/
-.name{
+#tiitle{
+    font-size: 3.5vh;
+    margin-bottom: 30px;
+    -webkit-text-stroke-width: 0.3px;
+    -webkit-text-stroke-color: rgb(39, 37, 37);
+}
+
+#name{
     font-family: 'Courier New', Courier, monospace;
     font-size: 4.1vh;
     -webkit-text-stroke-width: 0.3px;
@@ -70,6 +77,13 @@ span{
     color: coral;
     margin-bottom: 3vh;
     margin-top: 4vh;
+}
+
+#text{
+    font-size: 1.8vh;
+    -webkit-text-stroke-width: 0.1px;
+    -webkit-text-stroke-color: rgb(39, 37, 37);
+    color: azure;   
 }
 
 .image{
@@ -94,6 +108,12 @@ span{
     width: 100%;
     background-color: #36393e;
     padding-bottom: 30px;
+}
+
+.next-tittle{
+    font-size: 2.5vh;
+    color: coral;
+    margin-bottom: 3vh; 
 }
 
 .footer{
