--- a/style/aboutme.css
+++ b/style/aboutme.css
@@ -5,7 +5,8 @@
     margin-left: 25%;
     margin-top: 50px;
     padding-bottom: 30px;
-    background-color:#3b3e41;
+    background-color: #32353d;
+    border: 1px solid rgb(110, 76, 63);
     border-radius: 20px;
 }
 
