--- a/style/main.css
+++ b/style/main.css
@@ -1,5 +1,7 @@
 *{
-    background-color: #36393e;
+    /* background-color: #36393e; */
+    background-color: #2c2f35;
+    background-color: #282C34;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: white;
     margin: 0px;
@@ -74,6 +76,7 @@ span{
     -webkit-text-stroke-width: 0.3px;
     -webkit-text-stroke-color: rgb(39, 37, 37);
     font-weight: 600;
+    /* color: coral; */
     color: coral;
     margin-bottom: 3vh;
     margin-top: 4vh;
@@ -87,8 +90,8 @@ span{
 }
 
 .image{
-    filter: blur(9px);
-    -webkit-filter: blur(9px);
+    filter: blur(7px);
+    -webkit-filter: blur(7px);
     width: 100%;
     height: 60vh;
 }
@@ -106,7 +109,7 @@ span{
 .back2{
     position: relative;
     width: 100%;
-    background-color: #36393e;
+    background-color: #282C34;
     padding-bottom: 30px;
 }
 
