--- a/style/projects.css
+++ b/style/projects.css
@@ -5,7 +5,8 @@
     margin-left: 17%;
     margin-top: 50px;
     padding-bottom: 40px;
-    background-color:#3b3e41;
+    background-color: #32353d;
+    border: 1px solid rgb(110, 76, 63);
     border-radius: 20px;
 }
 
@@ -95,12 +96,12 @@
     padding-left: 5vh;
     padding-right: 5vh;
     padding-top: 4vh;
-    border-color: gray;
+    border-color: rgb(126, 125, 125);
     margin-left: 7px;
     margin-right: 7px;
     -webkit-filter: grayscale(65%); 
     filter: grayscale(65%);
-    background-color: rgb(82, 87, 85);
+    background-color: rgb(64, 69, 85);
     padding-bottom: 20px;
     border-radius: 15px;
     cursor: pointer;
@@ -109,7 +110,7 @@
 .project:hover{
     -webkit-filter: grayscale(10%); 
     filter: grayscale(0%);   
-    background-color: rgb(100, 98, 98);
+    background-color: rgb(78, 76, 76);
     border-color: coral;
 }
 
