update style and desc

--- a/style/main.css
+++ b/style/main.css
@@ -55,6 +55,7 @@ span{
     font-size: 1.8vh;
     -webkit-text-stroke-width: 0.1px;
     -webkit-text-stroke-color: rgb(39, 37, 37);
+    transition: color 700ms;
   }
 
   .nav-style:hover{
