--- a/style/aboutme.css
+++ b/style/aboutme.css
@@ -30,9 +30,25 @@
 }
 
 .aboutme-text{
-    font-size: 1.7vh;
+    font-size: 1.65vh;
     background: none;   
+    text-align: left;
+    margin: auto;
+    margin-top: 4%;
+    margin-bottom: 5%;
+    margin-left: 20%;
+    margin-right: 20%;
 }
+.skills-main{
+    background-color: #32353d;
+}
+@media (max-width:1300px){
+    .aboutme-text{
+        margin-left: 10%;
+        margin-right: 10%; 
+    }
+  }
+
 .skills-tittle{
     color: antiquewhite;
     font-size: 1.5vh;
